# aptlantis.studio

./: .env.example  .eslintrc.cjs  .gitignore  .prettierignore  AGENTS.md  Aptlants.Studio.schema.toml  README.md  aptlantis.studio.manifest.toml  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.ts
docs/: aptlantis.studio.pps.md  cloudflare-agent-discovery.md  graphics-sesm-plan.md  rust-backend-services-guide.md  svg-sesm-embedding-usage.md
docs/cleeanup-and-revision-stage/: AptlantisLayoutPatternLibrary.md  CodingAgainstTheGrain-AbsortionIntoAptlantisStudio.md  PublicMetadataAndCrawlerManifestStandard.md  WebsiteStructureCleanupPlan.md
functions/: [[path]].ts
public/: _headers  auth.md  index.md  prism.css  prism.js  robots.txt  sitemap.xml
public/.well-known/: api-catalog  aptlantis.studio_0x0BE88A1564D5B232_public.asc  http-message-signatures-directory  oauth-authorization-server  oauth-protected-resource  security.txt
public/command-schemas/: command-schemas.json
public/data/: about_page.schema.json  about_page.schema_completed.json  aptlantis.dashboard_data.json  incoming-message.schema.json  manifest.json  mirror-status.json  quickLinks.json
public/schemas/: aptlantis-studio-manifest.schema.json  aptlantis.dashboard_data.json  (+3 more)
scripts/: generate-linux-genealogy-svg.mjs
server/: index.ts
services/aptlantis-services/: Cargo.toml  Dockerfile  README.md  docker-compose.example.yml  docker-compose.yml
services/aptlantis-services/src/: main.rs
src/: App.css  App.tsx  index.css  main.tsx
(+525 files in other folders)
