[package]
name = "aptlantis-services"
version = "0.1.0"
edition = "2021"
description = "Rust microservice host for Aptlantis Studio."
license = "CC0-1.0"

[dependencies]
anyhow = "1.0"
axum = "0.8"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["fs", "macros", "net", "process", "rt-multi-thread", "signal", "time"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
